Repara alguns recursos

--- a/index.html
+++ b/index.html
@@ -6,15 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Web</title>
     <link rel="stylesheet" href="index-style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Leandro Doudement França</h1>
+    <header>
+        <div>
+        <h3>Leandro França - Web Developer</h3>
+        </div>
+        <div class="navegador">    
+        <nav>
+                <ul class="lista-navegador">
+                    <li><a href="#QSE">Quem sou eu</a></li>
+                    <li>Meus trabalhos</li>
+                    <li>Contato</li>
+                </ul>
+            </nav>
+            </div>
+    </header>
+    <section id="QSE">
     <figure>
-    <img id="Leandro" src="/Imagens/fotodeperfil.jpeg" alt="Foto de perfil" width="300px">
-    <div class="legenda">
-        <a href="https://www.linkedin.com/in/leandro-fran%C3%A7a-937741221/" target="_blank">Linkedin</a>
-        <a href="https://github.com/LeandroDoudement" target="_blank">GitHub</a>
-    </div>    
+    <img id="Leandro" src="/Imagens/fotodeperfil.jpeg" alt="Foto de perfil" width="300px">  
     </figure>
         <p>Meu nome é Leandro, sou de Goiânia(GO), comecei a estudar programação recentemente pois descobri essa minha paixão ao ter contato com ela na universidade, desde então venho estudando pelo <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a> as linguagens de HTML, CSS e Javascript e recentemente iniciei meus estudos na Trybe para me tornar um Web Developer.
         </p>
@@ -25,6 +38,7 @@
             <li>Javascript</li>
             <li>Git</li>
         </ul>
+        </section>
 
 </body>
 </html>
