Cores, posições das tags

--- a/index.html
+++ b/index.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Web</title>
-    <link rel="stylesheet" href="index-style.css" type="text/css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="index-style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div>
+      <div>
         <h3>Leandro França - Web Developer</h3>
-        </div>
-        <div class="navegador">    
+      </div>
+      <div class="navegador">
         <nav>
-                <ul class="lista-navegador">
-                    <li><a href="#QSE">Quem sou eu</a></li>
-                    <li>Meus trabalhos</li>
-                    <li>Contato</li>
-                </ul>
-            </nav>
-            </div>
+          <ul class="lista-navegador">
+            <li><a href="#QSE">Quem sou eu</a></li>
+            <li><a href="#MT">Meus trabalhos</a></li>
+            <li><a href="#C">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <section id="QSE">
-    <figure>
-    <img id="Leandro" src="/Imagens/fotodeperfil.jpeg" alt="Foto de perfil" width="300px">  
-    </figure>
-        <p>Meu nome é Leandro, sou de Goiânia(GO), comecei a estudar programação recentemente pois descobri essa minha paixão ao ter contato com ela na universidade, desde então venho estudando pelo <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a> as linguagens de HTML, CSS e Javascript e recentemente iniciei meus estudos na Trybe para me tornar um Web Developer.
+      <div class="espaço"></div>
+      <div class="container1">
+        <img
+          id="Leandro"
+          src="/Imagens/fotodeperfil.jpeg"
+          alt="Foto de perfil"
+          width="300px"
+        />
+        <p class="descricao">
+          Meu nome é Leandro, sou de Goiânia(GO), comecei a estudar programação
+          recentemente pois descobri essa minha paixão ao ter contato com ela na
+          universidade, desde então venho estudando pelo
+          <a href="https://www.freecodecamp.org/" target="_blank"
+            >FreeCodeCamp</a
+          >
+          as linguagens de HTML, CSS e Javascript e recentemente iniciei meus
+          estudos na Trybe para me tornar um Web Developer.
         </p>
-        <h3>Lista de habilidades atuais: </h3>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>Git</li>
-        </ul>
-        </section>
-
-</body>
+    </div>
+<div class="habilidades">
+    <h3>Lista de habilidades atuais:</h3>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>Git</li>
+      </ul>
+      </div>
+    </section>
+    <section id="MT">
+      <h3>Meus Trabalhos</h3>
+    </section>
+  </body>
 </html>
