Adiciona projetos, contatos, imagens e background colors

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
           <ul class="lista-navegador">
             <li><a href="#QSE">Quem sou eu</a></li>
             <li><a href="#MT">Meus trabalhos</a></li>
-            <li><a href="#C">Contato</a></li>
+            <li><a href="#Contatos">Contato</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <section id="QSE">
       <div class="espaço"></div>
-      <div class="container1">
+      <div class="container-introducao">
         <img
           id="Leandro"
           src="/Imagens/fotodeperfil.jpeg"
@@ -60,6 +60,33 @@
     </section>
     <section id="MT">
       <h3>Meus Trabalhos</h3>
+<div class="container-trabalhos">
+  <div class="trabalho"><h4>Projeto 1</h4></div>
+  <div class="trabalho"><h4>Projeto 2</h4></div>
+  <div class="trabalho"><h4>Projeto 3</h4></div>
+  <div class="trabalho"><h4>Projeto 4</h4></div>
+  <div class="trabalho"><h4>Projeto 5</h4></div>
+  <div class="trabalho"><h4>Projeto 6</h4></div>
+</div>
+    </section>
+    <section id="Contatos">
+      <footer>
+        <h3>Contato</h3>
+        <div class="container-footer">
+          <div class="linkedin">
+            <img src="Imagens/174857.png" alt="Linkedin" width="100px">
+            <h4><a href="https://www.linkedin.com/in/leandro-fran%C3%A7a-937741221/">Linkedin</a></h4>
+          </div>
+          <div class="email">
+            <img src="/Imagens/Gmail-Logo.png" alt="Email" width="100px">
+            <h4><a href="">leandrodoudement@gmail.com</a></h4>
+          </div>
+          <div class="github">
+            <img src="/Imagens/25231.png" alt="Github" width="100px">
+            <h4><a href="https://github.com/LeandroDoudement">GitHub</a></h4>
+          </div>
+        </div>
+      </footer>
     </section>
   </body>
 </html>
