Adiciona o grid para projetos, conserta a distancia do footer

--- a/index.html
+++ b/index.html
@@ -61,12 +61,30 @@
     <section id="MT">
       <h3>Meus Trabalhos</h3>
 <div class="container-trabalhos">
-  <div class="trabalho"><h4>Projeto 1</h4></div>
-  <div class="trabalho"><h4>Projeto 2</h4></div>
-  <div class="trabalho"><h4>Projeto 3</h4></div>
-  <div class="trabalho"><h4>Projeto 4</h4></div>
-  <div class="trabalho"><h4>Projeto 5</h4></div>
-  <div class="trabalho"><h4>Projeto 6</h4></div>
+ <a href="" class="trabalhos trabalhos-titulo">
+  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
+  <p class="trabalhos-titulo">Projeto 1</p>
+ </a>
+ <a href="" class="trabalhos trabalhos-titulo">
+  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
+  <p class="trabalhos-titulo">Projeto 2</p>
+ </a>
+ <a href="" class="trabalhos trabalhos-titulo">
+  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
+  <p class="trabalhos-titulo">Projeto 3</p>
+ </a>
+ <a href="" class="trabalhos trabalhos-titulo">
+  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
+  <p class="trabalhos-titulo">Projeto 4</p>
+ </a>
+ <a href="" class="trabalhos trabalhos-titulo">
+  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
+  <p class="trabalhos-titulo">Projeto 5</p>
+ </a>
+ <a href="" class="trabalhos trabalhos-titulo">
+  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
+  <p class="trabalhos-titulo">Projeto 6</p>
+ </a>
 </div>
     </section>
     <section id="Contatos">
