Adiciona diversos recursos

--- a/index.html
+++ b/index.html
@@ -28,83 +28,116 @@
         </nav>
       </div>
     </header>
-    <section id="QSE">
-      <div class="espaço"></div>
-      <div class="container-introducao">
-        <img
-          id="Leandro"
-          src="/Imagens/fotodeperfil.jpeg"
-          alt="Foto de perfil"
-          width="300px"
-        />
-        <p class="descricao">
-          Meu nome é Leandro, sou de Goiânia(GO), comecei a estudar programação
-          recentemente pois descobri essa minha paixão ao ter contato com ela na
-          universidade, desde então venho estudando pelo
-          <a href="https://www.freecodecamp.org/" target="_blank"
-            >FreeCodeCamp</a
-          >
-          as linguagens de HTML, CSS e Javascript e recentemente iniciei meus
-          estudos na Trybe para me tornar um Web Developer.
-        </p>
-    </div>
-<div class="habilidades">
-    <h3>Lista de habilidades atuais:</h3>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Javascript</li>
-        <li>Git</li>
-      </ul>
-      </div>
-    </section>
-    <section id="MT">
-      <h3>Meus Trabalhos</h3>
-<div class="container-trabalhos">
- <a href="" class="trabalhos trabalhos-titulo">
-  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
-  <p class="trabalhos-titulo">Projeto 1</p>
- </a>
- <a href="" class="trabalhos trabalhos-titulo">
-  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
-  <p class="trabalhos-titulo">Projeto 2</p>
- </a>
- <a href="" class="trabalhos trabalhos-titulo">
-  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
-  <p class="trabalhos-titulo">Projeto 3</p>
- </a>
- <a href="" class="trabalhos trabalhos-titulo">
-  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
-  <p class="trabalhos-titulo">Projeto 4</p>
- </a>
- <a href="" class="trabalhos trabalhos-titulo">
-  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
-  <p class="trabalhos-titulo">Projeto 5</p>
- </a>
- <a href="" class="trabalhos trabalhos-titulo">
-  <img src="/Imagens/istockphoto-1320330053-170667a.jpg" alt="" class="trabalhos-imagem">
-  <p class="trabalhos-titulo">Projeto 6</p>
- </a>
-</div>
-    </section>
-    <section id="Contatos">
-      <footer>
-        <h3>Contato</h3>
-        <div class="container-footer">
-          <div class="linkedin">
-            <img src="Imagens/174857.png" alt="Linkedin" width="100px">
-            <h4><a href="https://www.linkedin.com/in/leandro-fran%C3%A7a-937741221/">Linkedin</a></h4>
+    <main>
+      <section id="QSE">
+        <div class="container-introducao content">
+          <img
+            id="Leandro"
+            src="/Imagens/fotodeperfil.jpeg"
+            alt="Foto de perfil"
+            width="300px"
+          />
+          <div>
+            <h3 class="titulo">Quem sou eu:</h3>
+            <p class="descricao">
+              Meu nome é Leandro, sou de Goiânia(GO), comecei a estudar
+              programação recentemente pois descobri essa minha paixão ao ter
+              contato com ela na universidade, desde então venho estudando pelo
+              <a href="https://www.freecodecamp.org/" target="_blank"
+                >FreeCodeCamp</a
+              >
+              as linguagens de HTML, CSS e Javascript e recentemente iniciei
+              meus estudos na Trybe para me tornar um Web Developer.
+            </p>
+            <h3>Lista de habilidades atuais:</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+              <li>Git</li>
+            </ul>
           </div>
-          <div class="email">
-            <img src="/Imagens/Gmail-Logo.png" alt="Email" width="100px">
-            <h4><a href="">leandrodoudement@gmail.com</a></h4>
+        </div>
+      </section>
+      <section id="MT">
+        <div class="content">
+          <h3 class="titulo">Meus Trabalhos:</h3>
+          <div class="container-trabalhos">
+            <a href="" class="trabalhos trabalhos-titulo">
+              <img
+                src="/Imagens/istockphoto-1320330053-170667a.jpg"
+                alt=""
+                class="trabalhos-imagem"
+              />
+              <p class="trabalhos-titulo">Projeto 1</p>
+            </a>
+            <a href="" class="trabalhos trabalhos-titulo">
+              <img
+                src="/Imagens/istockphoto-1320330053-170667a.jpg"
+                alt=""
+                class="trabalhos-imagem"
+              />
+              <p class="trabalhos-titulo">Projeto 2</p>
+            </a>
+            <a href="" class="trabalhos trabalhos-titulo">
+              <img
+                src="/Imagens/istockphoto-1320330053-170667a.jpg"
+                alt=""
+                class="trabalhos-imagem"
+              />
+              <p class="trabalhos-titulo">Projeto 3</p>
+            </a>
+            <a href="" class="trabalhos trabalhos-titulo">
+              <img
+                src="/Imagens/istockphoto-1320330053-170667a.jpg"
+                alt=""
+                class="trabalhos-imagem"
+              />
+              <p class="trabalhos-titulo">Projeto 4</p>
+            </a>
+            <a href="" class="trabalhos trabalhos-titulo">
+              <img
+                src="/Imagens/istockphoto-1320330053-170667a.jpg"
+                alt=""
+                class="trabalhos-imagem"
+              />
+              <p class="trabalhos-titulo">Projeto 5</p>
+            </a>
+            <a href="" class="trabalhos trabalhos-titulo">
+              <img
+                src="/Imagens/istockphoto-1320330053-170667a.jpg"
+                alt=""
+                class="trabalhos-imagem"
+              />
+              <p class="trabalhos-titulo">Projeto 6</p>
+            </a>
           </div>
-          <div class="github">
-            <img src="/Imagens/25231.png" alt="Github" width="100px">
-            <h4><a href="https://github.com/LeandroDoudement">GitHub</a></h4>
+        </div>
+      </section>
+      <footer id="Contatos">
+        <div class="content">
+          <h3 class="titulo">Contato:</h3>
+          <div class="container-footer">
+            <div class="linkedin">
+              <img src="Imagens/174857.png" alt="Linkedin" width="100px" />
+              <h4>
+                <a
+                  href="https://www.linkedin.com/in/leandro-fran%C3%A7a-937741221/"
+                  >Linkedin</a
+                >
+              </h4>
+            </div>
+            <div class="email">
+              <img src="/Imagens/Gmail-Logo.png" alt="Email" width="100px" />
+              <h4><a href="">leandrodoudement@gmail.com</a></h4>
+            </div>
+            <div class="github">
+              <img src="/Imagens/25231.png" alt="Github" width="100px" />
+              <h4><a href="https://github.com/LeandroDoudement">GitHub</a></h4>
+            </div>
           </div>
         </div>
       </footer>
-    </section>
+    </main>
   </body>
 </html>
